[project]
name = "yfinance-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black>=25.1.0",
    "fastmcp>=2.10.2",
    "pandas>=2.3.0",
    "python-dotenv>=1.1.1",
    "yfinance>=0.2.64",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pylint>=4.0.3",
]
